--- a/config.json
+++ b/config.json
@@ -15,40 +15,8 @@
         "title": "Edgeware Blockchain Explorer",
         "author": "Bharathcoorg",
         "useEthFiat": false,
-        "tokenList": "tokens.json",
-        "miners": {
-           "0xf34eaf6e2cf4744b5e29734295135c4213d59149": "f2pool.com",
-           "0xed15b7b7b5dc81daae277a081b47a04c3a8bea1b": "clopool.pro",
-           "0xd125b3b146d21d058edac7a5b5f7481a571e4c46": "clo.epool.io",
-           "0xe683de43ccfbef16424ecb577f288cf343dfbc5a": "coinfoundry.org",
-           "0x0073cf1b9230cf3ee8cab1971b8dbef21ea7b595": "clo.2miners.com",
-           "0x40b67778d97a7d15a519d907ed991948e8ea486c": "pool.baikalmine.com",
-           "0x8845ee5cae61b807678415bb8a68773df9d48f8e": "callistopool.org",
-           "0x52f0458c70af5cdeb555cad800add5f82c3e59f7": "callisto-pool.com",
-           "0xd06bb917c099acf24d43552b5aa760aeef7cd4aa": "callistopool.io",
-           "0xf35074bbd0a9aee46f4ea137971feec024ab704e": "clo.solopool.org",
-           "0xd144e30a0571aaf0d0c050070ac435deba461fab": "clona.ru",
-           "0x8057c50c6d72f4399862fefbc8d3b8a8757cde57": "clopool.net",
-           "0xfbf679d6ed0cb9747e05e7e8ae06e890e6bf2b66": "clo.europool.me",
-           "0x11905bd0863ba579023f662d1935e39d0c671933": "comining.io",
-           "0xe4f3cab1f11d5a917ac73c80927e64ee4b1a445a": "clo.pool.sexy",
-           "0xae83a3e136e6714e6c1e5483950936d7872fb999": "clo.mobilla.io",
-           "0x39ec1c88a7a7c1a575e8c8f42eff7630d9278179": "clo.topmining.co.kr",
-           "0xd6d27255eaef8c3fcb5433acb5494bf04cb5f2c3": "clo.gonspool.com",
-           "0x004730417cd2b1d19f6be2679906ded4fa8a64e2": "clo.2miners.com (solo)",
-           "0x89308111f17a395b82f1e5a2824bd01fd13a53b5": "wolverines",
-           "0x800f25eb68a06ff9671605bd450c29e80f593e0a": "clo.minerpool.net",
-           "0xa5d9018f6c99ec3230633c1187c5cb607c704ed8": "clo.mole-pool.net",
-           "0xfe59743b65f2afec200ce279a289cb4a43eb7eeb": "farmine.net",
-           "0x811bad1a4041a9f6ed8fc2f4e9d421dc82626f81": "clo.ethash.farm",
-           "0xbd12b4511ec9fd1cf481d5643f307252ae6f55e2": "solo.clopool.pro",
-           "0x5f7661e493d4f1a318c02e9383568597e8a09b5a": "clopool.org",
-           "0xe0bac765ca88706a12e4f5a9c0e92dc823fe6293": "clo.cryptomena.io",
-           "0x40c48b386e15981df5a10552cb97ee6d232c8547": "solo-clo.ethash.farm",
-           "0x458ddc6a7e924554756f95715a53bf948560ee38": "clo.digipools.org",
-           "0x3c6b9edb1f8ec6c85436b7cb384eb607489c732f": "vvpool.com",
-           "0x2a1efdf9f09869a82e5e6b0f3736aabcb5381206": "uleypool.com",
-           "0xf30a30315d5214e490458d0511595e42b3d917d0": "maxhash.org"
-        }
+        "tokenList": "tokens.json"
+
+
     }
 }
